prevent width overflows

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -652,6 +652,7 @@ server-error-flag {
       box-shadow: none !important;
       span {
         border-right: 1px solid #aaa;
+        border-top: 1px solid #aaa;
         height: 100%;
         width: 100%;
         display: inline-block;
@@ -663,9 +664,10 @@ server-error-flag {
     height: 40px;
     border-right: none;
     border-bottom: none;
-    border-top: 1px solid #aaa;
+    border-top: none;
     border-left: 1px solid #aaa;
     margin-bottom: 0px;
+    background: none;
     .progress-bar.progress-bar-non-terminal {
       background-color: #ccc;
       background: linear-gradient(#ccc, darken(#ccc, 10%));
